<resources>
    <string name="app_name">Timetable App</string>
    <string name="title_activity_time_table">Time Table</string>
    <string name="title_activity_set_up">Set Up</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="title_activity_router">Router</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="start_set_up_butt">Start Set Up</string>
    <string name="how_many_subjects_do_you_have">How many subjects do you have?</string>
    <string name="next">Next</string>
    <string name="press_start_set_up_to_start">Press \'Start Set Up\' to start.</string>
    <string name="welcome_to_the_timetable_app">Welcome to the Timetable app.</string>
    <string name="how_many_days_do_you_have">How many schooldays do you have per week?</string>
    <string name="what_is_the_first_day">What is the first day?</string>
    <string name="number_of_lessons">Number of Lessons:</string>
    <string name="subjects">Subjects:</string>
    <string name="number_of_breaks">Number of Breaks:</string>
    <string name="number_of_miscellaneous_sessions">Number of miscellaneous sessions\n(any session that is not a lesson or break):</string>
    <string name="title_activity_set_table">setTable</string>
    <string name="finish">Finish</string>
    <string name="section_done">Done!</string>
    <string name="Length_min">Length (min):</string>
    <string name="reminders">Reminders:</string>
    <string name="task_description">Task Description</string>
    <string name="task_due_on">Task Due On:</string>
    <string name="task_set_on">Task Set On:</string>
    <string name="task_title">Task Title</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="subject">Subject:</string>
    <string name="when_does_the_day_start">When does the day start?</string>
    <string name="view_tasks">Tasks</string>
    <string name="title_activity_view_task_details">ViewTaskDetails</string>
    <string name="delete_task">Delete Task</string>
    <string name="ediit_task">Edit Task</string>
    <string name="noTasks">No Tasks!</string>
    <string name="splashimage">splashImage</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_edit_day">EditDay</string>
    <string name="save_day">Save Day</string>
    <string name="day">Day</string>
    <string name="session_name">Session Name:</string>
    <string name="edit">Edit</string>
    <string name="title_activity_test_time_table">testTimeTable</string>
    <string name="version">Beta V0.9</string>
    <string name="no_tasks">No Tasks!</string>
    <string name="title_activity_edit_table">EditTable</string>
</resources>
