<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
	  xmlns:android="http://schemas.android.com/apk/res/android">

    <group
    	android:id="@+id/nav_group"
	android:checkableBehavior="single">
        <item android:title="@string/title_activity_time_table" android:id="@+id/table"
              android:icon="@drawable/ic_view_day_black_24dp"/>
        <item
            android:id="@+id/tasks"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/view_tasks"/>
    </group>
    <group
	android:id="@+id/setting_group"
	android:checkableBehavior="single">
	<item 
	    android:title="@string/settings"
	    android:id="@+id/settings_drawer"
	    android:icon="@drawable/ic_settings_black_24dp"/>
        <item
			android:title="Debug" android:id="@+id/settings"
			android:icon="@drawable/ic_adb_black_24dp"
			tools:ignore="HardcodedText"/>
    </group>
</menu>