<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:text="@string/welcome_to_the_timetable_app"
        android:layout_width="150dp"
        android:layout_height="wrap_content" android:id="@+id/textView2"
        android:layout_marginTop="100dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <Button
        android:text="@string/start_set_up_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:id="@+id/startSetUp" style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/textView3" android:layout_centerHorizontal="true"
    />
    <TextView
        android:text="@string/press_start_set_up_to_start"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:layout_width="170dp" android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>