<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/saveTask"
        android:layout_below="@+id/appbar_addTask">

        <LinearLayout
            android:id="@+id/addTaskView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/subjectTaskSpinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/taskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:ems="20"
                android:hint="@string/task_title"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/taskDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:ems="10"
                android:hint="@string/task_description"
                android:inputType="textMultiLine"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/task_set_on"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/setDateBut"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"/>

                <TextView
                    android:id="@+id/setDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginTop="10dp"
                    android:text="test"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    tools:ignore="HardcodedText"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:text="@string/task_due_on"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/dueDateBut"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/dueDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginTop="10dp"
                    android:text="test"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    tools:ignore="HardcodedText"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:text="@string/reminders"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:ignore="RelativeOverlap"/>

                <Button
                    android:id="@+id/addReminders"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_add_black_24dp"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:drawablePadding="0dp"
                    android:foreground="@drawable/ripple_add"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveTask"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:text="@string/save"/>
</RelativeLayout>
