<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.user.timetable_test.ViewTaskDetails">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_View_task_det"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/appBar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:transitionName="title"/>

    <TextView
        android:id="@+id/task_desc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignEnd="@+id/dueDate"
        android:layout_alignStart="@+id/title"
        android:layout_below="@+id/title"
        android:text="Test" android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:transitionName="desc"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/task_desc"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignStart="@+id/title"
        android:layout_below="@+id/task_desc"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/task_set_on"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView15"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:text="@string/task_due_on"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
        android:id="@+id/setDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignStart="@+id/textView15"
        android:layout_below="@+id/textView15" android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="Set Date" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
        android:id="@+id/dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignEnd="@+id/textView16"
        android:layout_below="@+id/textView16" android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:text="TextView"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:transitionName="dueDate"/>
    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignStart="@+id/textView15"
        android:layout_below="@+id/setDate" android:layout_marginTop="28dp"
        android:text="@string/reminders"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_alignStart="@+id/textView19"
        android:layout_below="@+id/textView19"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">
        <LinearLayout android:id="@+id/reminders_view" android:layout_width="match_parent"
                      android:layout_height="wrap_content" android:orientation="vertical"/>
    </ScrollView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_popup_reminder"
        android:layout_alignTop="@+id/textView19" android:layout_toEndOf="@+id/textView15"
        android:id="@+id/imageView2"/>

</RelativeLayout>
